libapp_kit = static_library(
	'app_kit',
	[
		'AppDefs.cpp',
		'Application.cpp',
		'AppMisc.cpp',
		'AppServerLink.cpp',
		'Clipboard.cpp',
		'Cursor.cpp',
		'DesktopLink.cpp',
		'DirectMessageTarget.cpp',
		'Handler.cpp',
		'InitTerminateLibBe.cpp',
		'Invoker.cpp',
		'Key.cpp',
		'KeyStore.cpp',
		'LaunchRoster.cpp',
		'LinkReceiver.cpp',
		'LinkSender.cpp',
		'Looper.cpp',
		'LooperList.cpp',
		'Message.cpp',
		'MessageAdapter.cpp',
		'MessageFilter.cpp',
		'MessageQueue.cpp',
		'MessageRunner.cpp',
		'MessageUtils.cpp',
		'Messenger.cpp',
		'Notification.cpp',
		'PortLink.cpp',
		'PropertyInfo.cpp',
		'RegistrarDefs.cpp',
		'Roster.cpp',
		'RosterPrivate.cpp',
		'Server.cpp',
		'ServerLink.cpp',
		'ServerMemoryAllocator.cpp',
		'TokenSpace.cpp',
		'TypeConstants.cpp',
	],
	include_directories: [
		hdr_base,
		hdr_private_app,
		hdr_private_shared,
		hdr_private_kernel,
		hdr_private_interface,
		hdr_private_system,
		hdr_private_libroot,
	]
)
