subdir('layouter')
subdir('textview_support')

libinterface_kit = static_library(
	'interface_kit',
	[
		'AboutWindow.cpp',
		'AbstractLayout.cpp',
		'AbstractLayoutItem.cpp',
		'AbstractSpinner.cpp',
		'AffineTransform.cpp',
		'Alert.cpp',
		'Alignment.cpp',
		'Bitmap.cpp',
		'BMCPrivate.cpp',
		'Box.cpp',
		'Button.cpp',
		'CardLayout.cpp',
		'CardView.cpp',
		'ChannelControl.cpp',
		'ChannelSlider.cpp',
		'CheckBox.cpp',
		'ColorControl.cpp',
		'ColorConversion.cpp',
		'ColorMenuItem.cpp',
		'ColumnListView.cpp',
		'ColumnTypes.cpp',
		'Control.cpp',
		'ControlLook.cpp',
		'DecimalSpinner.cpp',
		'DecorInfo.cpp',
		'Deskbar.cpp',
		'Dragger.cpp',
		'Font.cpp',
		'Gradient.cpp',
		'GradientConic.cpp',
		'GradientDiamond.cpp',
		'GradientLinear.cpp',
		'GradientRadial.cpp',
		'GradientRadialFocus.cpp',
		'GraphicsDefs.cpp',
		'GridLayout.cpp',
		'GridLayoutBuilder.cpp',
		'GridView.cpp',
		'GroupLayout.cpp',
		'GroupLayoutBuilder.cpp',
		'GroupView.cpp',
		'HaikuControlLook.cpp',
		'Icon.cpp',
		'Input.cpp',
		'InterfaceDefs.cpp',
		'Layout.cpp',
		'LayoutContext.cpp',
		'LayoutItem.cpp',
		'LayoutUtils.cpp',
		'ListItem.cpp',
		'ListView.cpp',
		'Menu.cpp',
		'MenuBar.cpp',
		'MenuField.cpp',
		'MenuItem.cpp',
		'MenuItemPrivate.cpp',
		'MenuPrivate.cpp',
		'MenuWindow.cpp',
		'OptionControl.cpp',
		'OptionPopUp.cpp',
		'OutlineListView.cpp',
		'Picture.cpp',
		'PictureButton.cpp',
		'PictureDataWriter.cpp',
		'PicturePlayer.cpp',
		'Point.cpp',
		'Polygon.cpp',
		'PopUpMenu.cpp',
		'PrintJob.cpp',
		'PrivateScreen.cpp',
		'RadioButton.cpp',
		'Rect.cpp',
		'Region.cpp',
		'RegionSupport.cpp',
		'Screen.cpp',
		'ScrollBar.cpp',
		'ScrollView.cpp',
		'SeparatorItem.cpp',
		'SeparatorView.cpp',
		'Shape.cpp',
		'Shelf.cpp',
		'Size.cpp',
		'Slider.cpp',
		'SpaceLayoutItem.cpp',
		'Spinner.cpp',
		'SplitLayout.cpp',
		'SplitLayoutBuilder.cpp',
		'SplitView.cpp',
		'StatusBar.cpp',
		'StringItem.cpp',
		'StringView.cpp',
		'TabView.cpp',
		'TextControl.cpp',
		'TextInput.cpp',
		'TextView.cpp',
		'ToolTip.cpp',
		'ToolTipManager.cpp',
		'TwoDimensionalLayout.cpp',
		'View.cpp',
		'ViewLayoutItem.cpp',
		'ViewPort.cpp',
		'Window.cpp',
		'WindowStack.cpp',
		'ZombieReplicantView.cpp',
	],
	cpp_args: ['-D_DEFAULT_SOURCE'],
	include_directories: [
		include_directories(
			'layouter',
			'textview_support',
			is_system: false
		),
		hdr_base,
		hdr_private_locale,
		hdr_private_interface,
		hdr_private_app,
		hdr_private_shared,
		hdr_private_support,
		hdr_private_input,
		hdr_private_print,
		hdr_private_tracker,
	],
	link_with: [
		libinterface_kit_layouter,
		libinterface_kit_textview_support
	]
)
