libshared = static_library(
	'shared',
	[
		'AboutMenuItem.cpp',
		'ArgumentVector.cpp',
		'AttributeUtilities.cpp',
		'BitmapButton.cpp',
		'CalendarView.cpp',
		'ColorQuantizer.cpp',
		'CommandPipe.cpp',
		'DragTrackingFilter.cpp',
		'DriverSettingsMessageAdapter.cpp',
		'ExpressionParser.cpp',
		'HashString.cpp',
		'IconButton.cpp',
		'IconView.cpp',
		'Json.cpp',
		'JsonEvent.cpp',
		'JsonEventListener.cpp',
		'JsonMessageWriter.cpp',
		'JsonTextWriter.cpp',
		'JsonWriter.cpp',
		'Keymap.cpp',
		'LongAndDragTrackingFilter.cpp',
		'md5.cpp',
		'MessageBuilder.cpp',
		'NaturalCompare.cpp',
		'PromptWindow.cpp',
		'QueryFile.cpp',
		'RegExp.cpp',
		'RWLocker.cpp',
		'RWLockManager.cpp',
		'SettingsHandler.cpp',
		'SettingsMessage.cpp',
		'ShakeTrackingFilter.cpp',
		'StringForRate.cpp',
		'StringForSize.cpp',
		'StripeView.cpp',
		'TextTable.cpp',
		'Thread.cpp',
		'ToolBar.cpp',
		'Variant.cpp',
		system_keymap_h,
	],
	include_directories: [
		hdr_base,
		hdr_private_shared,
		hdr_private_kernel,
		hdr_private_interface,
		hdr_private_locale,
		hdr_private_system,
		hdr_private_libroot,
		hdr_libs_mapm,
		'..',
	],
	gnu_symbol_visibility: 'hidden'
)
