subdir('mime')
subdir('disk_device')

libstorage_kit = static_library(
	'storage_kit',
	[
		'AddOnImage.cpp',
		'AddOnMonitor.cpp',
		'AddOnMonitorHandler.cpp',
		'AppFileInfo.cpp',
		'CopyEngine.cpp',
		'Directory.cpp',
		'DriverSettings.cpp',
		'Entry.cpp',
		'EntryList.cpp',
		'EntryOperationEngineBase.cpp',
		'FdIO.cpp',
		'File.cpp',
		'FileDescriptorIO.cpp',
		'FileIO.cpp',
		'FindDirectory.cpp',
		'MergedDirectory.cpp',
		'Mime.cpp',
		'MimeType.cpp',
		'Node.cpp',
		'NodeInfo.cpp',
		'NodeMonitor.cpp',
		'NodeMonitorHandler.cpp',
		'OffsetFile.cpp',
		'Path.cpp',
		'PathFinder.cpp',
		'PathMonitor.cpp',
		'Query.cpp',
		'QueryPredicate.cpp',
		'RemoveEngine.cpp',
		'ResourceFile.cpp',
		'ResourceItem.cpp',
		'Resources.cpp',
		'ResourcesContainer.cpp',
		'ResourceStrings.cpp',
		'Statable.cpp',
		'storage_support.cpp',
		'SymLink.cpp',
		'Volume.cpp',
		'VolumeRoster.cpp',
		'sniffer/CharStream.cpp',
		'sniffer/DisjList.cpp',
		'sniffer/Err.cpp',
		'sniffer/Parser.cpp',
		'sniffer/Pattern.cpp',
		'sniffer/PatternList.cpp',
		'sniffer/Range.cpp',
		'sniffer/RPattern.cpp',
		'sniffer/RPatternList.cpp',
		'sniffer/Rule.cpp',
	],
	include_directories: [
		hdr_base,
		hdr_private_storage,
		hdr_private_system,
		hdr_private_shared,
		hdr_private_app,
		hdr_private_kernel,
		hdr_private_libroot,
	],
	link_with: [
		libstorage_kit_mime,
	],
	link_whole: [
		libstorage_disk_device,
	]
)
