libsupport_kit = static_library(
	'support_kit',
	[
		'Architecture.cpp',
		'Archivable.cpp',
		'ArchivingManagers.cpp',
		'Base64.cpp',
		'Beep.cpp',
		'BlockCache.cpp',
		'BufferedDataIO.cpp',
		'BufferIO.cpp',
		'ByteOrder.cpp',
		'CompressionAlgorithm.cpp',
		'DataIO.cpp',
		'DataPositionIOWrapper.cpp',
		'DateTime.cpp',
		'Flattenable.cpp',
		'Job.cpp',
		'JobQueue.cpp',
		'List.cpp',
		'Locker.cpp',
		'PointerList.cpp',
		'Referenceable.cpp',
		'StopWatch.cpp',
		'String.cpp',
		'StringList.cpp',
		'Url.cpp',
		'Uuid.cpp',
		'ZlibCompressionAlgorithm.cpp',
		'ZstdCompressionAlgorithm.cpp',
	],
	include_directories: [
		hdr_base,
		hdr_private_support,
		hdr_private_app,
		hdr_private_media,
		hdr_private_interface,
		hdr_private_locale,
	]
)
