subdir('os')

libroot = shared_library(
	'root',
	[
		'libroot_init.c',
	],
	include_directories: [
		hdr_private,
		hdr_private_libroot,
		hdr_private_runtimeloader,
		hdr_private_system,
	],
	link_whole: [
		libos_arch_x86_64,
#		libos_main,
#		libposix_arch_x86_64,
#		libposix_crypt,
#		libposix_gnu_arch_x86_64,
#		libposix_gnu_ctype,
#		libposix_gnu_ext,
#		libposix_gnu_iconv,
#		libposix_gnu_libio,
#		libposix_gnu_locale,
#		libposix_gnu_math,
#		libposix_gnu_misc,
#		libposix_gnu_regex,
#		libposix_gnu_stdio,
#		libposix_gnu_stdlib,
#		libposix_gnu_wcsmbs,
#		libposix_locale,
#		libposix_malloc,
#		libposix_musl,
#		libposix_main,
#		libposix_pthread,
#		libposix_signal,
#		libposix_stdio,
#		libposix_stdlib,
#		libposix_string_arch_x86_64,
#		libposix_string,
#		libposix_sys,
#		libposix_time,
#		libposix_unistd,
#		libposix_wchar,
	],
)
