libinterface_kit_textview_support = static_library(
	'interface_kit_textview_support',
	[
		'InlineInput.cpp',
		'LineBuffer.cpp',
		'StyleBuffer.cpp',
		'TextGapBuffer.cpp',
		'UndoBuffer.cpp',
		'WidthBuffer.cpp',
	],
	include_directories: [
		hdr_base,
		hdr_private_interface,
		include_directories('..', is_system: false),
	]
)
