libstorage_disk_device = static_library(
	'storage_disk_device',
	[
		'DiskDevice.cpp',
		'DiskDeviceJob.cpp',
		'DiskDeviceJobGenerator.cpp',
		'DiskDeviceJobQueue.cpp',
		'DiskDeviceList.cpp',
		'DiskDevicePrivate.cpp',
		'DiskDeviceRoster.cpp',
		'DiskDeviceTypes.cpp',
		'DiskDeviceVisitor.cpp',
		'DiskSystem.cpp',
		'DiskSystemAddOn.cpp',
		'DiskSystemAddOnManager.cpp',
		'MutablePartition.cpp',
		'Partition.cpp',
		'PartitionDelegate.cpp',
		'PartitionParameterEditor.cpp',
		'PartitionReference.cpp',
		'PartitioningInfo.cpp',
		'jobs/CreateChildJob.cpp',
		'jobs/DefragmentJob.cpp',
		'jobs/DeleteChildJob.cpp',
		'jobs/InitializeJob.cpp',
		'jobs/MoveJob.cpp',
		'jobs/RepairJob.cpp',
		'jobs/ResizeJob.cpp',
		'jobs/SetStringJob.cpp',
		'jobs/UninitializeJob.cpp',
	],
	include_directories: [
		include_directories('jobs', is_system: false),
		hdr_base,
		hdr_private_storage,
		hdr_private_system,
		hdr_private_shared,
		hdr_private_app,
	]
)
