libstorage_kit_mime = static_library(
	'storage_kit_mime',
	[
		'AppMetaMimeCreator.cpp',
		'AssociatedTypes.cpp',
		'database_support.cpp',
		'Database.cpp',
		'DatabaseDirectory.cpp',
		'DatabaseLocation.cpp',
		'InstalledTypes.cpp',
		'MimeEntryProcessor.cpp',
		'MimeInfoUpdater.cpp',
		'MimeSniffer.cpp',
		'MimeSnifferAddon.cpp',
		'MimeSnifferAddonManager.cpp',
		'SnifferRules.cpp',
		'Supertype.cpp',
		'SupportingApps.cpp',
		'TextSnifferAddon.cpp',
	],
	include_directories: [
		hdr_base,
		hdr_private_storage,
		hdr_private_shared,
	]
)
