
static_library(
	'objects/haiku/x86_64/release/system/libroot/posix/posix_main.o',
	[
		'assert.cpp',
		'cat.cpp',
		'dirent.cpp',
		'dlfcn.c',
		'errno.c',
		'fcntl.cpp',
		'glob.c',
		'grp.cpp',
		'inttypes.c',
		'libgen.cpp',
		'libstdthreads/call_once.c',
		'libstdthreads/cnd.c',
		'libstdthreads/mtx.c',
		'libstdthreads/thrd.c',
		'libstdthreads/tss.c',
		'poll.cpp',
		'pwd.cpp',
		'scheduler.cpp',
		'semaphore.cpp',
		'shadow.cpp',
		'spawn.cpp',
		'syslog.cpp',
		'termios.c',
		'user_group_common.cpp',
		'utime.c',
		'utmpx.cpp',
	],
	include_directories: [
		'headers/private',
		'headers/private/app',
		'headers/private/kernel',
		'headers/private/libroot',
		'headers/private/runtime_loader',
		'headers/private/shared',
		'headers/private/syslog_daemon',
		'headers/private/system',
		'headers/private/system/arch/x86_64',
	],
	include_directories: [
		'.',
		'libstdthreads',
	],
)
