
static_library(
	'objects/haiku/x86_64/release/system/libroot/posix/malloc_debug/posix_malloc_debug.o',
	[
		'guarded_heap.cpp',
		'heap.cpp',
		'malloc_debug_api.cpp',
	],
	include_directories: [
		'headers/private',
		'headers/private/libroot',
		'headers/private/runtime_loader',
		'headers/private/shared',
		'headers/private/system',
		'headers/private/system/arch/x86_64',
	],
	include_directories: [
		'.',
	],
)
