
static_library(
	'objects/haiku/x86_64/release/system/libroot/posix/malloc_hoard2/posix_malloc.o',
	[
		'arch-specific.cpp',
		'heap.cpp',
		'processheap.cpp',
		'superblock.cpp',
		'threadheap.cpp',
		'wrapper.cpp',
	],
	include_directories: [
		'headers/private',
		'headers/private/libroot',
		'headers/private/shared',
		'headers/private/system',
		'headers/private/system/arch/x86_64',
	],
	include_directories: [
		'.',
	],
)
