
static_library(
	'objects/haiku/x86_64/release/system/libroot/posix/signal/posix_signal.o',
	[
		'kill.c',
		'killpg.cpp',
		'psiginfo.cpp',
		'psignal.cpp',
		'raise.c',
		'send_signal.c',
		'set_signal_mask.cpp',
		'set_signal_stack.c',
		'sigaction.cpp',
		'sigaltstack.c',
		'sighold.cpp',
		'sigignore.cpp',
		'siginterrupt.cpp',
		'signal.cpp',
		'signal_limits.cpp',
		'sigpause.cpp',
		'sigpending.cpp',
		'sigqueue.cpp',
		'sigrelse.cpp',
		'sigset.cpp',
		'sigset_accessors.cpp',
		'sigsuspend.cpp',
		'sigtimedwait.cpp',
		'sigwait.cpp',
		'sigwaitinfo.cpp',
		'strsignal.cpp',
	],
	include_directories: [
		'headers/private',
		'headers/private/libroot',
		'headers/private/shared',
		'headers/private/system',
		'headers/private/system/arch/x86_64',
	],
	include_directories: [
		'.',
	],
)
