
static_library(
	'objects/haiku/x86_64/release/system/libroot/posix/stdio/posix_stdio.o',
	[
		'__freading.cpp',
		'_fseek.c',
		'fpurge.cpp',
		'remove.c',
		'rename.c',
	],
	include_directories: [
		'headers/private',
		'headers/private/libroot',
		'headers/private/shared',
		'headers/private/system',
		'headers/private/system/arch/x86_64',
	],
	include_directories: [
		'.',
	],
)
