
static_library(
	'objects/haiku/x86_64/release/system/libroot/posix/stdlib/posix_stdlib.o',
	[
		'abs.c',
		'atfork.c',
		'atof.c',
		'atoi.c',
		'bsearch.c',
		'div.c',
		'env.cpp',
		'exit.cpp',
		'heapsort.c',
		'merge.c',
		'mktemp.c',
		'pty.cpp',
		'qsort.c',
		'radixsort.c',
		'random.c',
		'realpath.cpp',
		'strfmon.c',
		'strtol.c',
		'strtoll.c',
		'strtoul.c',
		'strtoull.c',
	],
	include_directories: [
		'headers/compatibility/bsd',
		'headers/private',
		'headers/private/drivers',
		'headers/private/kernel',
		'headers/private/libroot',
		'headers/private/runtime_loader',
		'headers/private/shared',
		'headers/private/system',
		'headers/private/system/arch/x86_64',
	],
	include_directories: [
		'.',
	],
)
