
static_library(
	'objects/haiku/x86_64/release/system/libroot/posix/string/posix_string.o',
	[
		'bcmp.c',
		'bcopy.c',
		'bzero.c',
		'memccpy.c',
		'memchr.c',
		'memcmp.c',
		'memmove.c',
		'stpcpy.c',
		'strcasecmp.c',
		'strcasestr.c',
		'strcat.c',
		'strchr.c',
		'strchrnul.c',
		'strcmp.c',
		'strcoll.cpp',
		'strcpy.c',
		'strcspn.c',
		'strdup.cpp',
		'strerror.c',
		'strlcat.c',
		'strlcpy.c',
		'strlen.cpp',
		'strlwr.c',
		'strncat.c',
		'strncmp.c',
		'strncpy.cpp',
		'strndup.cpp',
		'strnlen.cpp',
		'strpbrk.c',
		'strrchr.c',
		'strspn.c',
		'strstr.c',
		'strtok.c',
		'strupr.c',
		'strxfrm.cpp',
	],
	include_directories: [
		'headers/private',
		'headers/private/libroot',
		'headers/private/libroot/locale',
	],
	include_directories: [
		'.',
	],
)
