
static_library(
	'objects/haiku/x86_64/release/system/libroot/posix/sys/posix_sys.o',
	[
		'chmod.c',
		'flock.c',
		'ftime.c',
		'ftok.c',
		'getrusage.c',
		'gettimeofday.c',
		'itimer.cpp',
		'mkdir.c',
		'mkfifo.c',
		'mknod.c',
		'mman.cpp',
		'priority.c',
		'rlimit.c',
		'select.cpp',
		'stat.c',
		'statvfs.c',
		'times.cpp',
		'uio.c',
		'umask.c',
		'uname.c',
		'utimes.c',
		'wait.cpp',
		'xsi_msg_queue.cpp',
		'xsi_sem.cpp',
	],
	include_directories: [
		'headers/private',
		'headers/private/libroot',
		'headers/private/shared',
		'headers/private/system',
		'headers/private/system/arch/x86_64',
	],
	include_directories: [
		'.',
	],
)
